# simple-prometheus

./: .gitignore  README.md  pyproject.toml
src/: pushgateway_delete.py  pushgateway_push.py  server.py
