[tool.poetry]
name = "simple-prometheus"
version = "0.1.0"
description = ""
authors = ["SungminSo <soos196@hanyang.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
